<resources>
    <string name="app_name">fTouch POS</string>
    <!--<string name="app_name">fTouch POS Demo</string>-->

    <string name="terms"> <u>Terms and Conditions</u>.</string>
    <string name="contact_no"> <u>call</u>.</string>
    <string name="title_activity_restaurant__lite">Restaurant_LiteActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="termsofservice">All copyright, trade marks, design rights, patents and other
        intellectual property rights (registered and unregistered)
        Nothing in the Terms grants you a right or license to use any trade mark, design right or
        copyright owned or controlled by the BBC or any other third party except as expressly provided in the Terms.</string>

    <string name="Login_preference">Login Prefernce</string>
    <string name="Login_status_key">Login status</string>

    <string name="Rs">\u20B9 </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_shap__lite_">SHAP_Lite_Activity</string>

    <string name="logout_message">Are you sure want to logout?</string>

    <string-array name="doc_type">
        <item>Select Document Type</item>
        <item>PAN CARD</item>
        <item>DRIVING LICENSE</item>
        <item>VOTER ID</item>
        <item>PASSPORT</item>
        <item>AADHAR CARD</item>
        <item>RASHAN CARD</item>
        <item>OTHER</item>
    </string-array>

    <string name="notification_title">This is Alert!</string>
    <string name="notification_text">From Alarm Example!</string>
    <string name="time">Time</string>
    <string name="send_notification2">Send Notification</string>


    <string name="title_activity_vendor_detail">VendorDetailActivity</string>

    <string name="Retail_View">Retail View</string>
    <string name="Retail_View_long_label">@string/Retail_View</string>

    <string name="Table_View">Table View</string>
    <string name="Table_View_long_label">@string/Table_View</string>

    <string name="title_1">Cool card</string>
    <string name="title_2">Ok card</string>
    <string name="title_3">Bad card</string>
    <string name="title_4">Ugly card</string>

    <string name="text_1">Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Etiam eget ligula eu lectus lobortis condimentum.</string>

    <string name="login">LOGIN</string>
    <string name="show_pwd">SHOW PASSWORD</string>
    <string name="forgot">FORGOT PASSWORD?</string>
    <string name="newUser">NOT A MEMBER YET?</string>
    <string name="userid">USER ID</string>
    <string name="passowrd">PASSWORD</string>
    <string name="hide_pwd">HIDE PASSWORD</string>
    <string name="signUp">SIGN UP</string>

    <string name="err_msg_user_id">Enter your User id</string>
    <string name="err_msg_password">Enter your Password</string>

    <string name="err_msg_name">Enter your hotel name</string>
    <string name="err_msg_gst">Enter your GST number</string>
    <string name="err_msg_con_person">Enter person name</string>
    <string name="err_msg_con_number">Enter your mobile number</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_address">Enter your address</string>
    <!--<string name="err_msg_state">Enter your state</string>-->
    <!--<string name="err_msg_city">Enter your city</string>-->
    <string name="err_msg_pincod">Enter your PinCode</string>
    <string name="err_msg_cin">Enter your CIN number</string>
    <string name="title_activity_filter_dialog">FilterDialogActivity</string>

    <string name="err_msg_country">Please select country</string>
    <string name="err_msg_state">Please select state</string>
    <string name="err_msg_city">Please select city</string>

    <!--BARCODE READER -->

    <string name="grant_permission">Grant Permission</string>
    <string name="permission_camera">This app needs camera permission to scan barcode</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="grant">GRANT</string>
    <string name="cancel">CANCEL</string>


    <string name="picker_title">Select Contacts</string>
    <string name="tv_select_btn_text_disabled">Finish</string>
    <string name="tv_select_btn_text_enabled">Finish(%1$s)</string>
    <string name="tv_select_all_btn_text">Select All</string>
    <string name="tv_unselect_all_btn_text">Un-select All</string>
    <string name="tv_no_contacts">No contacts found</string>

    <string name="gst_year_format">For GST purpose,
Ensure that the Invoice number format is alpha-numeric with allowed special characters of slash(/) and das(-).
The total number of characters should not be more than 16.</string>


    <string name="backup_reminder_dialog_title">Backup Remainder</string>
    <string name="empty_string">Its time to take Backup.</string>
    <string name="backup_to_cloud">Backup to Cloud</string>
    <string name="backup_to_local">Backup to Local</string>
    <string name="backup_reminder_message">Please take backup to prevent Data Loss.
        It is highly recommended to take backup now.\n \n

        Warning! Uninstalling the app would result in data loss.</string>

    <!-- Label for Types option in message format -->
    <string name="none_type">None</string>
    <string name="purchase_type">Purchase</string>
    <string name="offer_type">Offer</string>
    <string name="sales_type">Sales</string>
    <string name="quotation_type">Quotation</string>


    <!-- Label for default option in message format -->
    <string name="yes_default">Yes</string>
    <string name="No_default">No</string>

    <!-- Label for Amount Filter in message format -->
    <string name="none">None</string>
    <string name="LessThan">LessThan</string>
    <string name="GreaterThan">GreaterThan</string>
    <string name="LessThanEqualTo">LessThanEqualTo</string>
    <string name="GreaterThanEqualTo">GreaterThanEqualTo</string>


    <string name="search_hint">Search…</string>
    <string name="no_result_found">Results not found</string>
    <string name="select_country">Select a country</string>
    <string name="select_state">Select a State</string>


</resources>
