<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="15dip">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dip"
            android:text="@string/backup_reminder_dialog_title"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/empty_string"
            android:textSize="15sp" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.20000005dip"
        android:layout_marginTop="10dip"
        android:layout_marginBottom="10dip"
        android:background="#55000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dip"
        android:gravity="center"
        android:text="@string/backup_reminder_message"
        android:textAppearance="?android:textAppearanceMedium" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/br_backup_to_cloud"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="20dip"
            android:textColor="@color/white"
            android:theme="@style/Button.Colored.blue"
            android:text="@string/backup_to_cloud"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/br_backup_to_local"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="20dip"
            android:text="@string/backup_to_local"
            android:textColor="@color/black"
            android:theme="@style/Button.Colored.White"
            />
    </LinearLayout>
</LinearLayout>